src/test/resources/de/cd4analysis/cocos/invalid/A.cd
package de.cd4analysis.cocos;

classdiagram A {
  class C {
    String a;
    String a;
  }
  
  class B {
    String b;
    String b;
  }
}